--- a/renderer/css/phonghoc.css
+++ b/renderer/css/phonghoc.css
@@ -49,7 +49,7 @@ body{
     height: 100vh;
     overflow: hidden;
     background: #cecece;
-
+    position: relative;
 }
 
 .header .inline.tap {
@@ -590,3 +590,22 @@ body{
     width: 20px;
     color: white;
 }
+
+.err {
+    position: absolute;
+    top: 40px;
+    right: 0px;
+}
+
+.err .con {
+    height: 50px;
+    background: white;
+    width: 170px;
+    margin-right: 10px;
+    border-radius: 5px;
+    box-shadow: 1px 1px 2px black;
+    display: flex;
+    align-items: center;
+}
+
+
