--- a/renderer/css/phonghoc.css
+++ b/renderer/css/phonghoc.css
@@ -190,6 +190,7 @@ body{
     align-items: center;
     cursor: pointer;
     border: 1px solid rgb(190, 190, 190);
+
 }
 
 .body #noidungbaihoc.conten .file svg {
@@ -201,6 +202,7 @@ body{
 .body #noidungbaihoc.conten .file p {
     text-decoration: none;
     margin: 0;
+    text-align: left;
 }
 
 .body #noidungbaihoc.conten .file p.name {
