--- a/renderer/css/home.css
+++ b/renderer/css/home.css
@@ -1,7 +1,27 @@
+@font-face {
+    font-family: 'Open Sans';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../font/OpenSans-Semibold.ttf');
+}
+@font-face {
+    font-family: 'Open Sans Light';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../font/OpenSans-Regular.ttf');
+}
+
+:root {
+    --background : #f1f1f1;
+    --children-background : white;
+    --fontcollor: black;
+    --buttoncollor: #E4E6EB;
+}
+
+
 * {
     padding: 0;
     margin: 0;
-    font-family: "Roboto";
 }
 
 
@@ -12,7 +32,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: var(--children-background);
     border-radius: 5px;
 }
 
@@ -32,7 +52,7 @@
 body {
     height: 100vh;
     overflow: hidden;
-    background: rgb(204, 204, 204);
+    background: var(--background);
 }
 
 .sp {
@@ -41,28 +61,56 @@ body {
 
 .main-header {
     height: 40px;
-    background: white;
+    background: var(--children-background);
     border-radius: 9px;
     margin: 3px 10px;
     margin-top: 5px;
     display: flex;
     justify-content: space-between;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
 }
 
 .main-header .l{
     height: 100%;
     margin-left: 10px;
     width: fit-content;
-    display: flex;;
+    display: flex;
 }
 
 .main-header .r {
     margin-right: 10px;
 }
 
+.main-header .r .text-dis {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    color: black;
+    cursor: pointer;
+    height: 30px;
+    border-radius: 5px;
+    font-family: 'Open Sans';
+}
 
-.main-header button {
-    background: rgba(0, 0, 0, 0.26);
+.main-header .r .text-dis:hover {
+    background: var(--buttoncollor);
+}
+
+.main-header .r .text-dis svg {
+    margin-left: 10px;
+}
+
+.main-header .r .mor{
+    position: relative;
+}
+
+.main-header .r .mor:hover {
+    background: var(--background);
+}
+
+
+.main-header .bu {
+    background: var(--background);
     width: 80px;
     height: calc(100% - 10px);
     margin: 5px 0 5px 3px;
@@ -71,19 +119,68 @@ body {
     border: none;
     font-weight: 400;
     font-size: 15px;
-    color: black;
+    color: var(--b);
     border-radius: 9px;
+    cursor: pointer;
 }
 
-.main-header button.on {
+.main-header .more {
+    position: relative;
+}
+
+.main-header .more .contenr {
+    position: absolute;
+    z-index: 100;
+    display: none;
+    cursor: default;
+}
+
+.main-header .r li > ul {
+    margin: 0 10px 0 0;
+    border-right: 3px solid black;
+}
+
+.main-header .more .contenr button {
+    width: 80px;
+    height: 30px;
+    margin: 5px 0 5px 0;
+    background: #BDBDBD;
+}
+
+.main-header .more:hover .contenr{
+    display: block;
+}
+
+.main-header .more .contenr .bu:hover{
+    background: #919191;
+}
+
+
+.main-header .more svg {
+    height: 100%;
+    width: 23px;
+}
+
+.main-header .more .displa {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-header .bu.on {
     background: rgb(94, 223, 77);
 }
 
-.main-header button:hover {
+.main-header .bu:hover {
     background: rgba(0, 0, 0, 0.432);
 }
 
-.main-header button.on:hover {
+.main-header .bu.more:hover {
+    background: rgba(0, 0, 0, 0.26);
+}
+
+.main-header .bu.on:hover {
     background: rgb(75, 172, 62);
 }
 
@@ -94,11 +191,58 @@ body {
     align-items: center;
 }
 
-.mor ion-icon {
-    height: 100%;
-    width: 20px;
+
+.main-header .r .menu {
+    position: absolute;
+    cursor: default;
+    top: 100%;
+    right: 0;
+    z-index: 100;
+    width: max-content;
+    background: white;
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
-.mor div {
+
+.main-header .r ul {
+    height: 0px;
+    overflow: hidden;
+    transition: 0.2s;
+}
+
+.main-header .r ul.on {
+    height: fit-content;
+}
+.main-header .r ul.on li {
+    cursor: pointer;
+    opacity: 1;
+    margin-right: 0px;
+    font-family: 'Open Sans Light';
+}
+
+.main-header .r .menu ul > li > ul.on > li:hover {
+    background: var(--buttoncollor);
+    border-radius: 5px;
+}
+
+
+.main-header .r .menu ul,
+.main-header .r .menu li {
+    display: block;
+    text-align: right;
+    transition: 0.2s;
+}
+
+.main-header .r .menu li {
+    padding: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 5px;
+    color: var(--fontcollor);
+
+}
+
+.mor div.status {
     height: 10px;
     width: 10px;
     border-radius: 5px;
@@ -133,18 +277,18 @@ button.add ion-icon{
     padding-bottom: 5px;
     background: white;
     border-radius: 5px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
     margin: 10px;
-
 }
 
 .sub .sta {
     position: absolute;
     z-index: 2;
-    background: rgba(85, 255, 99, 0.534);
+    background: #88ff81;
     padding: 5px;
     margin: 10px;
     border-radius: 5px;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
 }
 
 .sub .img {
