--- a/renderer/css/main.css
+++ b/renderer/css/main.css
@@ -1,6 +1,14 @@
+@font-face {
+    font-family: 'Open Sans';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../font/OpenSans-Semibold.ttf');
+}
+
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Open Sans';
 }
 
 body {
