--- a/renderer/css/phonghoc.css
+++ b/renderer/css/phonghoc.css
@@ -48,7 +48,7 @@
 body{
     height: 100vh;
     overflow: hidden;
-    background: #cecece;
+    background: #F0F2F5;
     position: relative;
 }
 
@@ -109,6 +109,7 @@ body{
     width: 50px;
     height: 100%;
     position: relative;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
 }
 
 .starbar .li {
@@ -268,6 +269,7 @@ body{
     background: white;
     border-radius: 5px;
     padding: 5px 10px 0 10px;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
 }
 
 .body .ctl {
@@ -286,7 +288,7 @@ body{
     background: white;
     border-radius: 5px;
     cursor: pointer;
-
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
 }
 
 .body .ctl .da.a {
@@ -311,8 +313,9 @@ body{
     height: 6.5%;
     border-radius: 5px;
     position: relative;
-    transform: rotate3d(0 , 1 , 0 , 0deg);
     transition: 0.2s;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+
 }
 
 .body .directional .svg.turn-180 {
@@ -356,6 +359,7 @@ body{
 .body #noidungbaihoc.main_cauhoi {
     display: flex;
 }
+
 
 .body .cauhoi .stt {
     font-size: 18px;
@@ -429,6 +433,8 @@ body{
     height: calc(100% - 23px);
     margin: 10px 10px 5px 0;
     border-radius: 5px;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+
 }
 
 .body .chat .button_chat {
