--- a/renderer/css/main.css
+++ b/renderer/css/main.css
@@ -1,14 +1,8 @@
-@font-face {
-    font-family: 'Open Sans';
-    font-weight: normal;
-    font-style: normal;
-    src: url('../font/OpenSans-Semibold.ttf');
-}
 
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Open Sans';
+    font-family: "Roboto",sans-serif;
 }
 
 body {
@@ -30,7 +24,6 @@ body {
     outline: none;
     text-decoration: none;
     color: black;
-    font-weight: 540;
 }
 
 .header {
@@ -77,7 +70,6 @@ body {
     padding: 0 5px;
     height: 40px;
     font-size: 16px;
-    font-weight: 500;
     border: none;
     background: none;
     outline: none;
@@ -86,7 +78,6 @@ body {
 .txt_field label {
     position: absolute;
     top: 50%;
-    font-weight: bold;
     transform: translateY(-50%);
     left: 5px;
     font-size: 16px;
