--- a/renderer/css/phonghoc.css
+++ b/renderer/css/phonghoc.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -84,11 +85,18 @@ body{
     right: 20px;
     top: 50%;
     transform: translateY(-50%);
+    display: flex;
+    align-items: center;
 }
 
 .inline.timer svg {
     margin-right: 5px;
-    height: 20px;
+    height: 25px;
+}
+
+.inline.timer svg {
+    font-weight: bold;
+    font-size: initial;
 }
 
 
@@ -223,7 +231,8 @@ body{
     align-items: center;
     cursor: pointer;
     border: 1px solid rgb(190, 190, 190);
-
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+    margin-left: 5px;
 }
 
 .body #noidungbaihoc.conten .file svg {
@@ -318,6 +327,42 @@ body{
 
 }
 
+.body .directional .timer {
+    position: absolute;
+    left: 10px;
+    width: 100px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.body .directional .timer .rep {
+    width: 100%;
+    background: #dad6d6;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+    height: 70%;
+}
+
+.body .directional .timer .rep .back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 0;
+    background: rgb(76, 144, 97);
+    border-radius: 5px;
+}
+
+.body .directional .timer .rep h5 {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 3;
+    width: 100%;
+}
+
 .body .directional .svg.turn-180 {
     transform: rotate3d(0 , 1 , 0 , 180deg);
 }
@@ -338,7 +383,7 @@ body{
 }
 
 .body .ctl .da.select .svg {
-    color: #CE5505;
+    color: rgb(206, 85, 5);
 }
 
 
